# Trestle-ETL

./: .env.example  .gitignore  README.md  pyproject.toml  sync_state.json.bak.1779513679
scripts/: apply_schema.py  check_mysql.py  verify_load.py
tests/integration/: test_end_to_end_full_sync.py  test_schema_and_bulk_config.py
tests/property/: test_bulk_file_lifecycle.py  test_bulk_index_lifecycle.py  test_bulk_index_repair.py  test_cli_dry_run.py  test_cli_flag_combinations.py  test_cli_since_parse.py  test_crash_recovery_invariant.py  test_extractor_nextlink_stream.py  test_extractor_since_override.py  test_http_backoff_schedule.py  test_http_bearer_token.py  test_http_retry_after.py  test_http_retry_budget.py  test_http_retry_log.py  test_loaded_at_bounded.py  test_max_modts_reporting.py  test_model_roundtrip.py  test_orchestrator_crash_recovery.py  test_orchestrator_max_modts.py  test_orchestrator_progress_log.py  test_orchestrator_replication_state.py  test_orchestrator_resume_vs_pivot.py  test_raw_data_preservation.py  test_replication_state_invariant.py  test_rollback_preserves_state.py  test_state_roundtrip.py  test_timestamp_utc_roundtrip.py  test_token_cache.py  test_transformer_listing_key.py  test_transformer_missing_fields.py  test_upsert_batch_size.py  test_upsert_idempotence.py
tests/unit/: test_cli_errors.py  test_config.py  test_lock.py  test_no_print.py  (+1 more)
trestle_etl/: __init__.py  __main__.py  auth.py  cli.py  config.py  errors.py  extractor.py  http_client.py  lock.py  logging_setup.py  models.py  orchestrator.py  state.py  transformer.py
(+8 files in other folders)
